# Baldo-Scanner

./: .Module.symvers.cmd  .gitignore  .modules.order.cmd  CMakeLists.txt  Makefile  README.md  copy-module.sh  create-image.sh  doxygen.conf  kernel-dev.nix  modules.order  run-qemu.sh  shell.nix  ù
cli/: cli.cpp  main.cpp
common/: banner.cpp  logger.cpp  utils.cpp
daemon/: daemon.cpp  engine.cpp  kernel.cpp  main.cpp  malware_db.cpp  sandbox.cpp  yara.cpp
daemon/db/: malware_db.cpp
daemon/engine/: engine.cpp
include/cli/: cli.hpp
include/common/: banner.hpp  logger.hpp  settings.hpp  utils.hpp
include/daemon/: daemon.hpp  engine.hpp  kernel.hpp  malware_db.hpp  sandbox.hpp  yara.hpp
kernel/: .Module.symvers.cmd  .av.ko.cmd  .av.mod.cmd  .av.mod.o.cmd  .av.o.cmd  .av_char_dev.o.cmd  .av_common.o.cmd  .av_firewall.o.cmd  .av_kernel.ko.cmd  .av_kernel.mod.cmd  .av_kernel.mod.o.cmd  .av_kernel.o.cmd  .av_kernel.o.d  .av_kprobe.ko.cmd  .av_kprobe.mod.cmd  .av_kprobe.mod.o.cmd  .av_kprobe.o.cmd  .av_main.o.cmd  .av_netlink.o.cmd  .modules.order.cmd  .rootkit.ko.cmd  .rootkit.mod.cmd  .rootkit.mod.o.cmd  .rootkit.o.cmd  Makefile  av.ko  av.mod  av_char_dev.c  av_char_dev.h  av_common.c  av_common.h  av_firewall.c  av_firewall.h  av_kernel.c  av_kernel.ko  av_kernel.mod  av_kprobe.c  av_kprobe.h  av_kprobe.ko  av_kprobe.mod  (+10 more)
lib/: libcurlpp.so.1.0.0
tests/: Makefile  test_open.asm  test_open.c  test_open.out
